--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,4 +6,4 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: [ 'push', 'gcr.io/${_PROJECT_ID}/{_PROJECT_NAME}']
   - name: "gcr.io/cloud-builders/gcloud"
-    args: ['run', 'deploy', '{_PROJECT_NAME}', '--image', 'gcr.io/${_PROJECT_ID}/backend', '--region', 'asia-southeast2', '--platform', 'managed', '--allow-unauthenticated']
+    args: ['run', 'deploy', '{_PROJECT_NAME}', '--image', 'gcr.io/${_PROJECT_ID}/{_PROJECT_NAME}', '--region', 'asia-southeast2', '--platform', 'managed', '--allow-unauthenticated']
