--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/storage": "^7.10.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2"
   }
 }
