--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,3 +7,6 @@ steps:
     args: [ 'push', 'gcr.io/${_PROJECT_ID}/{_PROJECT_NAME}']
   - name: "gcr.io/cloud-builders/gcloud"
     args: ['run', 'deploy', '{_PROJECT_NAME}', '--image', 'gcr.io/${_PROJECT_ID}/{_PROJECT_NAME}', '--region', 'asia-southeast2', '--platform', 'managed', '--allow-unauthenticated']
+
+options:
+  logging: CLOUD_LOGGING_ONLY
