--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,11 +2,11 @@ steps:
   - name: 'gcr.io/cloud-builders/gsutil'
     args: ['cp', '${_ENV_PATH}', '.env']
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '-t', 'gcr.io/${_PROJECT_ID}/{_PROJECT_NAME}', '.' ]
+    args: [ 'build', '-t', 'gcr.io/${_PROJECT_ID}/jogjaku-api', '.' ]
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'push', 'gcr.io/${_PROJECT_ID}/{_PROJECT_NAME}']
+    args: [ 'push', 'gcr.io/${_PROJECT_ID}/jogjaku-api']
   - name: "gcr.io/cloud-builders/gcloud"
-    args: ['run', 'deploy', '{_PROJECT_NAME}', '--image', 'gcr.io/${_PROJECT_ID}/{_PROJECT_NAME}', '--region', 'asia-southeast2', '--platform', 'managed', '--allow-unauthenticated']
+    args: ['run', 'deploy', 'jogjaku-api', '--image', 'gcr.io/${_PROJECT_ID}/jogjaku-api', '--region', 'asia-southeast2', '--platform', 'managed', '--allow-unauthenticated']
 
 options:
   logging: CLOUD_LOGGING_ONLY
