--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,9 +4,9 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: [ 'build', '-t', 'gcr.io${_PROJECT_ID}/jogjaku-api', '.' ]
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'push', 'gcr.io/${_PROJECT_ID}/jogjaku-api']
+    args: [ 'push', 'gcr.io${_PROJECT_ID}/jogjaku-api']
   - name: "gcr.io/cloud-builders/gcloud"
-    args: ['run', 'deploy', 'jogjaku-api', '--image', 'gcr.io/${_PROJECT_ID}/jogjaku-api', '--region', 'asia-southeast2', '--platform', 'managed', '--allow-unauthenticated']
+    args: ['run', 'deploy', 'jogjaku-api', '--image', 'gcr.io${_PROJECT_ID}/jogjaku-api', '--region', 'asia-southeast2', '--platform', 'managed', '--allow-unauthenticated']
 
 options:
   logging: CLOUD_LOGGING_ONLY
