--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,18 @@
 steps:
   - name: 'gcr.io/cloud-builders/gsutil'
     args: ['cp', '${_ENV_PATH}', '.env']
-  - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '-t', 'gcr.io${_PROJECT_ID}/jogjaku-api', '.' ]
-  - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'push', 'gcr.io${_PROJECT_ID}/jogjaku-api']
+  - name: 'node:18'  # Choose appropriate Node.js version
+    args: ['npm', 'install']
+  - name: 'node:18'
+    args: ['npm', 'run', 'build']  # Replace 'build' with your build command
+  - name: 'gcr.io/cloud-builders/pack'
+    args: ['build', '--builder', 'gcr.io/buildpack-deps:latest', '.']  # Packs your application
+  - name: 'gcloud'  # Assuming you have configured gcloud with your project
+    args: ['artifacts', 'repositories', add', 'jogjaku-artifacts']  # Create repository if needed
+  - name: 'gcloud'
+    args: ['artifacts', 'placements', create', 'jogjaku-artifacts', 'asia-southeast1']  # Create placement in desired region
+  - name: 'gcloud'
+    args: ['artifacts', 'packages', publish', './*.tgz', '--repository', 'jogjaku-artifacts']  # Replace ./*.tgz with your artifact path
   - name: "gcr.io/cloud-builders/gcloud"
     args: ['run', 'deploy', 'jogjaku-api', '--image', 'gcr.io${_PROJECT_ID}/jogjaku-api', '--region', 'asia-southeast2', '--platform', 'managed', '--allow-unauthenticated']
 
